--- a/my_profile/profile.css
+++ b/my_profile/profile.css
@@ -555,14 +555,14 @@ body {
     outline: none;
     font-size: 14px;
 }
-@media only screen and (min-width: 576px){ 
+/* @media only screen and (min-width: 576px){  */
     .content-design .sm-button:hover {
         background-color: #ff2d54;
         color: #000;
         border: 2px solid #ff2d54;
         box-shadow: 0 0 20px rgba(255, 45, 83, 0.5), 0 0 30px rgba(255, 45, 83, 0.5), 0 0 40px rgba(255, 45, 83, 0.5);
     }
-} 
+
 
 .content-design .tab-content {
     padding: 0 1rem;
