--- a/style.css
+++ b/style.css
@@ -223,18 +223,25 @@
     max-width: 300px;
     border-color: #ff2d54;
     margin:auto;
-}
+    transform: scale(0.9);
+    transition: transform 0.3s ease-in-out;
+  }
+
 .card:hover {
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2),
-                0 0 40px rgba(0, 0, 0, 0.2),
-                0 0 60px rgba(0, 0, 0, 0.2);
-    transition: box-shadow 0.3s ease;
+    transform: scale(1);
+    transition: transform 0.3s ease-in;
 }
 
  .flip {
     width: 100%;
     height: 70vh;
     padding: 0;
+  }
+  .flip:hover{
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2),
+                0 0 40px rgba(0, 0, 0, 0.2),
+                0 0 60px rgba(0, 0, 0, 0.2);
+    transition: box-shadow 0.3s ease;
   }
   
    .flip-inner {
